refactor/store authmiddleware
add store service/ jwt middleware
refactor endpoints
refactor sql
tests update
delete old files
